--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
     <link rel="stylesheet" href="utils.css">
 </head>
 <body>
-    
+    <div class="container text-center mx-auto">
+        <h1>Calculator</h1>
+
+        <div class="row screen">
+            <input type="text" class="input" size="28">
+        </div>
+        <div class="row">
+            <button class="btn btn-clr">Clear</button>
+        </div>
+        <div class="row">
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">/</button>
+        </div>
+        <div class="row">
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">*</button>
+        </div>
+        <div class="row">
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">+</button>
+        </div>
+        <div class="row">
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btn">=</button>
+            <button class="btn">-</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
