--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container text-center mx-auto">
         <h1>Calculator</h1>
 
-        <div class="row screen">
+        <div class="row">
             <input type="text" class="input" size="28">
         </div>
         <div class="row">
